fix horizontal scroll for table on mobile devices

--- a/src/assets/styles/framework/components/_main.scss
+++ b/src/assets/styles/framework/components/_main.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: flex-start;
   padding: 0 $gutter;
+  overflow: hidden;
   @media screen and (min-width: map-get($breakpoints, lg)) {
     padding: 0;
   }
