--- a/src/assets/styles/framework/components/_table.scss
+++ b/src/assets/styles/framework/components/_table.scss
@@ -1,8 +1,10 @@
 @use '../settings' as *;
 
 .table-wrapper {
-  max-width: 100%;
+  display: block;
+  width: 100%;
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .table {
